# telegram-native

./: .gitignore  CMakeLists.txt  Cargo.toml  MANIFEST.xml  README.md  build.rs
.github/workflows/: release.yml
docs/: rust_transition_plan.md  usage_1c.md
native_api_1c/native_api_1c_core/: Cargo.toml
native_api_1c/native_api_1c_core/src/ffi/: mod.rs  string_utils.rs
src/: lib.rs
tests/: test_config.py
tools/docker/linux-builder/: Dockerfile
tools/vcpkg/ports/tdlib/: CONTROL  portfile.cmake
